kanc/src/tests/sample_code/should_fail/multi_file/bind/term_in_visibility_modifier/src/foo/bar.k
pub(pack.foo.Foo) type Empty {}
